--- a/assets/css/add.css
+++ b/assets/css/add.css
@@ -1,10 +1,10 @@
 
 .profile{
-	color: yellow; font-size: 50pt; font-family: arial; font-weight: bold;
+	color: orange; font-size: 50pt; font-family: arial; font-weight: bold;
 }
 
 .vice{
-    color: purple; font-size: 40pt; font-family: arial; 
+    font-size: 40pt; font-family: arial; 
 }
 
 .major{
